syntax = "proto3";

package main;

option go_package = "./seedlyserver";

service Seedly {
  rpc GetUpdateStream (DownloadRequest) returns (stream Update) {}
  rpc GetTorrentInfo (InfoRequest) returns (InfoResponse);
}

message DownloadRequest {
  string url = 1;
}

message Update {
  float progressInt = 1;
}

message InfoRequest{
	string url = 1;
}

message InfoResponse{
	string files = 1;
  string name = 2;
}